fixed wrapping

--- a/static/style.css
+++ b/static/style.css
@@ -228,7 +228,7 @@ input:focus {outline: none; }
 		overflow-y: auto;
 		overflow-x:hidden;		
 		height:100%;
-		white-space: pre;
+		white-space: pre-wrap;
 
 
 }
